k8s/ingress-frontend-and-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopsy-ingress
  namespace: shopsy
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopsy-frontend
                port:
                  number: 80
